--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/vercel": "^7.5.3",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
