--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.0",
+    "@astrojs/sitemap": "^3.1.3",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.3",
     "@types/react": "^18.2.78",
