show last commit on project card

--- a/src/projects.json
+++ b/src/projects.json
@@ -10,14 +10,16 @@
         }
       ],
       "status": "Active",
-      "statusColor": "green"
+      "statusColor": "green",
+      "fetchLastCommit": true
     },
     {
       "title": "Discord AI Bot",
       "description": "I am currently developing a Discord bot that is designed to use a LLM (Large Language Model) to chat with users. The bot is written in Python.",
       "githubLink": "https://github.com/Maximilian-Nesslauer/discord-ai-bot",
       "status": "Development",
-      "statusColor": "orange"
+      "statusColor": "orange",
+      "fetchLastCommit": true
     }
 ]
   
