--- a/src/projects template.json
+++ b/src/projects template.json
@@ -13,7 +13,8 @@
       }
     ],
     "status": "Active",
-    "statusColor": "green"
+    "statusColor": "green",
+    "fetchLastCommit": true
   },
   {
     "title": "Project 2",
@@ -28,6 +29,7 @@
       }
     ],
     "status": "Maintenance",
-    "statusColor": "yellow"
+    "statusColor": "yellow",
+    "fetchLastCommit": false
   }
 ]
